--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -11,7 +11,7 @@
          bootstrap="Tests/bootstrap.php"
         >
     <testsuites>
-        <testsuite name="SliVendorGitToolsBundle Test Suite">
+        <testsuite name="SliGitToolsBundle Test Suite">
             <directory>./Tests/</directory>
         </testsuite>
     </testsuites>
